# wfb

./: README.md
backend/: Cargo.toml  rustfmt.toml
backend/src/: main.rs  model.rs  request.rs  response.rs
backend/src/socket/: acks.rs  event.rs  events.rs  mod.rs  request.rs
frontend/: .prettierrc  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: index.ts  session.svelte.ts  socket_event.ts  socket_event_types.ts  utils.ts
frontend/src/lib/components/: Grid.svelte  Tooltip.svelte  WatcherGrid.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/room/[[roomId]]/join/: +page.svelte  +page.ts
frontend/src/routes/room/[roomId]/: +page.svelte  +page.ts
frontend/src/routes/room/[roomId]/join/: +page.svelte
frontend/src/routes/room/[roomId]/wait/: +page.svelte
frontend/src/routes/room/choosing/host/: +page.svelte
frontend/src/routes/room/crafting/: +page.svelte
frontend/src/routes/room/crafting/host/: +page.svelte
frontend/src/routes/room/host/: +page.svelte
frontend/src/routes/room/wait/: +page.svelte
